--- a/PrivateYelp/PrivateYelp/Base.lproj/Main.storyboard
+++ b/PrivateYelp/PrivateYelp/Base.lproj/Main.storyboard
@@ -10,9 +10,6 @@
         <array key="HKGrotesk-Bold.otf">
             <string>HKGrotesk-Bold</string>
         </array>
-        <array key="HKGrotesk-Regular.otf">
-            <string>HKGrotesk-Regular</string>
-        </array>
         <array key="HKGrotesk-SemiBold.otf">
             <string>HKGrotesk-SemiBold</string>
         </array>
@@ -125,71 +122,37 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="ERL-zT-hmf">
-                                <rect key="frame" x="12" y="792" width="390" height="40"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tfV-f4-Y1m">
-                                        <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="40" id="bOM-rr-3bl"/>
-                                        </constraints>
-                                        <state key="normal" image="mapButtonBottomBarUnselected"/>
-                                        <connections>
-                                            <action selector="mapButtonTapped:" destination="hLf-Rc-1hr" eventType="touchUpInside" id="bKk-83-oig"/>
-                                        </connections>
-                                    </button>
-                                    <view contentMode="scaleToFill" horizontalHuggingPriority="248" translatesAutoresizingMaskIntoConstraints="NO" id="zGR-el-8qh">
-                                        <rect key="frame" x="52" y="0.0" width="286" height="40"/>
-                                        <subviews>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="R4N-Xe-Vzx">
-                                                <rect key="frame" x="13" y="3" width="260" height="34"/>
-                                                <fontDescription key="fontDescription" name="HKGrotesk-Regular" family="HK Grotesk" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
-                                        </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                        <constraints>
-                                            <constraint firstItem="R4N-Xe-Vzx" firstAttribute="top" secondItem="zGR-el-8qh" secondAttribute="top" constant="3" id="SNY-ks-8XI"/>
-                                            <constraint firstItem="R4N-Xe-Vzx" firstAttribute="leading" secondItem="zGR-el-8qh" secondAttribute="leading" constant="13" id="cPa-7h-LvH"/>
-                                            <constraint firstAttribute="height" constant="40" id="e0b-zK-YsK"/>
-                                            <constraint firstAttribute="trailing" secondItem="R4N-Xe-Vzx" secondAttribute="trailing" constant="13" id="pm9-Dk-p2w"/>
-                                            <constraint firstAttribute="bottom" secondItem="R4N-Xe-Vzx" secondAttribute="bottom" constant="3" id="qZR-Um-Ma9"/>
-                                        </constraints>
-                                    </view>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PLf-99-dGO">
-                                        <rect key="frame" x="350" y="0.0" width="40" height="40"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="40" id="UiK-Uo-SKB"/>
-                                        </constraints>
-                                        <state key="normal" image="myReviewsButtonBottomBarSelected"/>
-                                    </button>
-                                </subviews>
-                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tfV-f4-Y1m">
+                                <rect key="frame" x="12" y="792" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="bOM-rr-3bl"/>
+                                </constraints>
+                                <state key="normal" image="mapButtonBottomBarUnselected"/>
+                                <connections>
+                                    <action selector="mapButtonTapped:" destination="hLf-Rc-1hr" eventType="touchUpInside" id="bKk-83-oig"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="9WJ-aS-b56" firstAttribute="trailing" secondItem="ERL-zT-hmf" secondAttribute="trailing" constant="12" id="6Ic-5T-kKh"/>
-                            <constraint firstItem="9WJ-aS-b56" firstAttribute="bottom" secondItem="ERL-zT-hmf" secondAttribute="bottom" constant="30" id="IWv-oO-1ns"/>
+                            <constraint firstItem="9WJ-aS-b56" firstAttribute="bottom" secondItem="tfV-f4-Y1m" secondAttribute="bottom" constant="30" id="4PT-Za-MM2"/>
                             <constraint firstItem="Vvx-eJ-tQk" firstAttribute="top" secondItem="9WJ-aS-b56" secondAttribute="top" id="MWN-92-BRd"/>
-                            <constraint firstItem="ERL-zT-hmf" firstAttribute="leading" secondItem="9WJ-aS-b56" secondAttribute="leading" constant="12" id="NIB-kj-Pns"/>
                             <constraint firstItem="Vvx-eJ-tQk" firstAttribute="trailing" secondItem="9WJ-aS-b56" secondAttribute="trailing" id="NLT-uU-QBO"/>
                             <constraint firstItem="Vvx-eJ-tQk" firstAttribute="bottom" secondItem="9WJ-aS-b56" secondAttribute="bottom" id="cEW-Ak-qnK"/>
                             <constraint firstItem="Vvx-eJ-tQk" firstAttribute="leading" secondItem="9WJ-aS-b56" secondAttribute="leading" id="v4W-VN-v5F"/>
+                            <constraint firstItem="tfV-f4-Y1m" firstAttribute="leading" secondItem="9WJ-aS-b56" secondAttribute="leading" constant="12" id="xHI-o7-gjm"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="9WJ-aS-b56"/>
                     </view>
                     <navigationItem key="navigationItem" id="O2L-tk-3Tl"/>
                     <connections>
                         <outlet property="mapButton" destination="tfV-f4-Y1m" id="Ihn-cu-If3"/>
-                        <outlet property="myReviewsButton" destination="PLf-99-dGO" id="CfW-Ae-FLB"/>
-                        <outlet property="searchContainer" destination="zGR-el-8qh" id="Iuj-4K-sj1"/>
-                        <outlet property="searchTextField" destination="R4N-Xe-Vzx" id="DBK-AH-Nfb"/>
                         <outlet property="tableView" destination="Vvx-eJ-tQk" id="g5h-s8-jST"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qmg-We-7Ww" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2190" y="-546"/>
+            <point key="canvasLocation" x="2189.8550724637685" y="-546.42857142857144"/>
         </scene>
         <!--Review Rating Checklist View Controller-->
         <scene sceneID="ajl-Z1-goN">
@@ -893,7 +856,6 @@
         <image name="checklistHeaderIcon" width="40" height="40"/>
         <image name="mapButtonBottomBarSelected" width="40" height="40"/>
         <image name="mapButtonBottomBarUnselected" width="40" height="40"/>
-        <image name="myReviewsButtonBottomBarSelected" width="40" height="40"/>
         <image name="myReviewsButtonBottomBarUnselected" width="40" height="40"/>
         <image name="nextButton" width="40" height="40"/>
         <image name="notesHeaderIcon" width="40" height="40"/>
