--- a/PrivateYelp/PrivateYelp/Base.lproj/Main.storyboard
+++ b/PrivateYelp/PrivateYelp/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sqx-g9-FlE">
                                 <rect key="frame" x="12" y="792" width="40" height="40"/>
-                                <state key="normal" image="mapButtonBottomBarSelected"/>
+                                <state key="normal" image="newReviewButton"/>
                                 <connections>
                                     <action selector="createNewReviewTapped:" destination="5GJ-P2-0Fo" eventType="touchUpInside" id="ZNQ-Le-XVL"/>
                                 </connections>
@@ -854,9 +854,9 @@
         <image name="addressIcon" width="24" height="24"/>
         <image name="checklistButtonUnselected" width="24" height="24"/>
         <image name="checklistHeaderIcon" width="40" height="40"/>
-        <image name="mapButtonBottomBarSelected" width="40" height="40"/>
         <image name="mapButtonBottomBarUnselected" width="40" height="40"/>
         <image name="myReviewsButtonBottomBarUnselected" width="40" height="40"/>
+        <image name="newReviewButton" width="40" height="40"/>
         <image name="nextButton" width="40" height="40"/>
         <image name="notesHeaderIcon" width="40" height="40"/>
         <image name="photosHeaderIcon" width="40" height="40"/>
